[metadata]
name = sonos-barcode
keywords = sonos, barcode, cd
version = attr: sonos_barcode.__version__
long_description = file: README.md
long_description_content_type = text/x-markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src
install_requires =
    evdev
    fastapi
    fastapi-socketio
    mysql-connector-python==8.0.29
    pydantic[dotenv]
    soco
    sqlalacchemy
    uvicorn
    uvicorn[standard]

[options.packages.find]
where=src

[options.package_data]
sonos_barcode:
    dist/*
    dist/*/*.*
    dist/*/*/*.*

[options.entry_points]
console_scripts = 
    sonos_barcode = sonos_barcode.serve:run

[bdist_wheel]
universal = true

[aliases]
test = pytest

[flake8]
ignore = E501,W503,E203,W504,E251,E262,E265,E266,W291,W293
